--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
             <li><a style="color: var(--main-color);" href="index1.html">Главная</a></li>
             <li><a href="vibor.html">Навигация</a></li>
             <li><a href="https://discord.gg/V63SwVtB66">Дискорд Сервер</a></li>
-            <li><a class="login" href="index2.html">Сменить язык</a></li>
         </ul>
     </header>
 
@@ -46,7 +45,7 @@
         <div class="page-text">
             <img class="anim" src="img/menu2.png" alt="">
             <h1 class="main-text anim">Побеждай в <span class="Roblox">Roblox</span> <br> прямо сейчас!</h1>
-            <p class="desc-text anim">Встречайте лучший бесплатный инжектор с 3 лвлом <br> инжекта подходящий <br> для многих скриптов!</p>
+            <p class="desc-text anim">Встречайте лучший бесплатный инжектор с 7 лвлом <br> инжекта подходящий <br> для многих скриптов!</p>
             <a class="main-btn install anim" href="index.html#inst-client"><span><i class='bx bxs-download'></i></span> Установить</a>
             <a class="faq anim" href="faq.php.html">FAQ</a>
         </div>
@@ -84,7 +83,7 @@
             <h1 class="title">Установка инжектора</h1>
             <p class="desc">Наилучший бесплатный чит для новичков с понятным <br>
                 и современным интерфейсом  </p>
-                <a class="main-btn install anim" href="https://moneyz.fun/ht7fPb"><span><i class="bx bxs-download"></i></span> Скачать</a>
+                <a class="main-btn install anim" href="https://mega.nz/file/TAcyEawA#5OTNtx3qpLlDp6rkLGq-bW34Zn9ZO7B_c3RWb2h6zog"><span><i class="bx bxs-download"></i></span> Скачать</a>
             <a class="faq anim" href="faq.php.html">Инструкция</a>
             <!-- <div style="padding-top: 17px;" class="inst-sup"><a style="color: #abaeb1;" class="faq" href="https://discord.gg/V63SwVtB66"> Купить с поддержкой</a> </div> -->
         </div>
