--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="page-text">
             <img class="anim" src="img/menu2.png" alt="">
             <h1 class="main-text anim">Побеждай в <span class="Roblox">Roblox</span> <br> прямо сейчас!</h1>
-            <p class="desc-text anim">Встречайте лучший бесплатный инжектор с 7 лвлом <br> инжекта подходящий <br> для многих скриптов!</p>
+            <p class="desc-text anim">Встречайте лучший бесплатный инжектор с 94 unc и с 7 лвлом <br> инжекта подходящий <br> для многих скриптов!</p>
             <a class="main-btn install anim" href="index.html#inst-client"><span><i class='bx bxs-download'></i></span> Установить</a>
             <a class="faq anim" href="faq.php.html">FAQ</a>
         </div>
