--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <h1 class="title">Установка инжектора</h1>
             <p class="desc">Наилучший бесплатный чит для новичков с понятным <br>
                 и современным интерфейсом  </p>
-                <a class="main-btn install anim" href="https://mega.nz/file/3Z83ALSI#4aDP0t1Oo7y99D-g25l_x_KWMDmvYQ2NnfmF9dcKNTg"><span><i class="bx bxs-download"></i></span> Скачать</a>
+                <a class="main-btn install anim" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><span><i class="bx bxs-download"></i></span> Скачать</a>
             <a class="faq anim" href="faq.php.html">Инструкция</a>
             <!-- <div style="padding-top: 17px;" class="inst-sup"><a style="color: #abaeb1;" class="faq" href="https://discord.gg/V63SwVtB66"> Купить с поддержкой</a> </div> -->
         </div>
