--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         </ul>
     </header>
 
-    <!-- Секция #1 - Главная страница, Элюсиум Клиент и ниже описание, справа меню -->
+
     <img class="bg-img" alt="">
     <div class="gradient"></div>
-    <div class="transition"></div> <!-- Переход между секциями -->
+    <div class="transition"></div> 
 
     <section id="main">
         <div class="page-text">
@@ -51,14 +51,14 @@
         </div>
     </section>
 
-    <!-- Секция #2 - Почему именно мы? (Описать тех. поддержку, визуалы, обходы)-->
+  
     <section id="whyus">
         <div class="whyus-text">
             <h1 class="sec-title">Почему именно мы?</h1>
             <div class="container">
                 <div class="wbox">
                     <h1 class="title">Доверие</h1>
-                    <p class="desc">Мы те люди которые начинали с чужих инжекторов, а так же мы довольно известные люди, много кому помогали.</p>
+                    <p class="desc">Мы те люди которые начинали с нуля и мы всегда готовы предоставить любые доказательства.</p>
                 </div>
                 
                 <div class="wbox">
@@ -77,7 +77,6 @@
         </div>
     </section>
 
-    <!-- Секция #4 - Установить лоадер/версию чита -->
     <section id="inst-client"> 
         <div class="inst-text">
             <h1 class="title">Установка инжектора</h1>
